# chessCPP

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  HistoryItem.h  Minimax.cpp  Minimax.h  Move.h  Piece.cpp  Piece.h  README.md  main.cpp  mainGUI.cpp
testing/: MinimaxTests.cpp
testing/perfts/: basicPerfts.txt  complexPerfts.txt  customPerfts.txt  failedPerfts.txt  perftTester.cpp  perftTester.h
